--- a/NTL-Tarefas/appsettings.json
+++ b/NTL-Tarefas/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=master;User Id=sa;Password=P@ssw0rd2025!;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
